--- a/css/style.css
+++ b/css/style.css
@@ -40,6 +40,13 @@ body {
   z-index: -1;
 }
 
+a {
+  text-decoration: none;
+  color: var(--color-link);
+  outline: none;
+  transition: color 0.3s;
+}
+
 /* 
 Content
 */
@@ -137,4 +144,114 @@ Item
   font-size: 0.85rem;
   color: var(--color-description);
   pointer-events: none;
+}
+
+/* 
+Frame
+*/
+.frame {
+  position: fixed;
+  top: 40px;
+  left: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: space-between;
+  padding: 3rem 5vw;
+  z-index: 100;
+}
+
+@media screen and (min-width: 768px) {
+  .frame {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: calc(100% - 3rem);
+    padding: 3rem;
+    display: grid;
+    grid-template-columns: 0% 100% 0%;
+    grid-template-rows: auto auto auto;
+    grid-template-areas:
+      'title demos links'
+      '. . .'
+      '. . .';
+  }
+}
+
+.frame__links {
+  display: flex;
+  gap: 2rem;
+  text-decoration: underline;
+}
+
+@media screen and (min-width: 768px) {
+  .frame__links {
+    padding: 0;
+    grid-column: -1 / 1;
+    grid-area: demos;
+    gap: 0;
+    text-decoration: none;
+  }
+}
+
+.frame__links a:first-child {
+  margin-right: auto;
+}
+
+.frame__links a:not(:first-child) {
+  margin-right: 2rem;
+}
+
+.frame a:hover {
+  color: var(--color-link-hover);
+}
+
+.frame__demo {
+  margin-bottom: 3rem;
+  order: -1;
+}
+
+@media screen and (min-width: 768px) {
+  .frame__demo {
+    margin-bottom: 0;
+    grid-area: demos;
+    justify-self: center;
+  }
+}
+
+/* 
+Loading
+*/
+body.loading::before,
+body.loading::after {
+  content: '';
+  position: fixed;
+  z-index: 1000;
+}
+
+body.loading::before {
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: var(--color-bg);
+}
+
+body.loading::after {
+  top: 50%;
+  left: 50%;
+  width: 60px;
+  height: 60px;
+  margin: -30px 0 0 -30px;
+  border-radius: 50%;
+  opacity: 0.4;
+  background: var(--color-link);
+  animation: loaderAnim 0.7s linear infinite alternate forwards;
+}
+
+@keyframes loaderAnim {
+  to {
+    opacity: 1;
+    transform: scale3d(0.5, 0.5, 1);
+  }
 }
